modified ticket iframe

--- a/www/templates/ticket/main.html
+++ b/www/templates/ticket/main.html
@@ -1,12 +1,12 @@
 <ion-view>
     <ion-content overflow-scroll="true" class="ticket">
         <iframe id="tkt-iframe" width="100%" frameborder="0" scrolling="no"
-                src="https://www.ticketea.com/entradas-festival-interestelar-sevilla/custom/"
-                style="overflow: hidden; height: 821px;width:100%" >
+                src="https://www.ticketea.com/entradas-festival-interestelar-sevilla-2017/custom/"
+                style="overflow: hidden; height: 921px;width:100%" >
 
         </iframe>
         <div class="partner">
-            <a href="//www.ticketea.com/entradas-festival-les-arts-2016/" alt="Festival de les Arts 2016" title="ticketea">
+            <a href="//www.ticketea.com/entradas-festival-interestelar-sevilla-2017/" alt="Festival Interestelar" title="ticketea">
                 <img src="img/ticket/powered_by.png" alt="ticketea" />
             </a>
         </div>
