modified left menu

--- a/www/templates/menu/main.html
+++ b/www/templates/menu/main.html
@@ -3,7 +3,7 @@
         <ion-nav-bar class="bar-light">
             <ion-nav-title>
                 <div class="logo">
-                    <img src="img/festival_arts.png">
+                    <img src="img/granada_sound.png">
                 </div>
             </ion-nav-title>
 
