--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -8,7 +8,7 @@
             <p>{{ ( (view.weathers[0].min_temp + view.weathers[0].max_temp) / 2 ) | number:0}} &deg;</p>
         </div>
         <div class="header-left-menu" menu-close ui-sref="menu.artist-discover">
-            <img src="img/menu/festival_arts.png">
+            <img src="img/menu/granada_sound.png">
         </div>
 
         <button class="button button-clear category" menu-close ui-sref="menu.artist-list">
@@ -43,13 +43,14 @@
             <img src="img/menu/category/transparent.gif">
             <a>Social</a>
         </button>
-        <!--<button class="button button-clear category" menu-close ui-sref="menu.coolway">-->
-            <!--<img src="img/menu/category/transparent.gif">-->
-            <!--<a>Coolway</a>-->
-        <!--</button>-->
+        <button class="button button-clear category" menu-close ui-sref="menu.coolway">
+            <img src="img/menu/category/coolway.png">
+            <a>Coolway</a>
+        </button>
 
         <div class="footer-left-menu">
             <img src="img/menu/the_night_time.png">
+            <img class="sun" src="img/menu/sun.png">
         </div>
     </ion-content>
 </ion-view>
