--- a/www/templates/ticket/main.html
+++ b/www/templates/ticket/main.html
@@ -1,11 +1,11 @@
 <ion-view>
     <ion-content overflow-scroll="true" class="ticket">
         <iframe frameborder="0" id="tkt-iframe" scrolling="no"
-                src="https://www.ticketea.com/entradas-festival-les-arts-2017/custom/"
+                src="{{view.iframe}}"
                 style="overflow: hidden; height: 600px; width:100%">
         </iframe>
         <div class="partner">
-            <a href="//www.ticketea.com/entradas-festival-les-arts-2016/" alt="Festival de les Arts 2016" title="ticketea">
+            <a ng-href="//www.ticketea.com/{{view.festival.ticketea}}/" alt="{{view.festival.name}} {{view.festival.year}}" title="ticketea">
                 <img src="img/ticket/powered_by.png" alt="ticketea" />
             </a>
         </div>
