--- a/www/templates/user/settings.html
+++ b/www/templates/user/settings.html
@@ -4,7 +4,7 @@
             <button class="button button-clear ion-close" ng-click="closeSettings()"></button>
         </div>
         <div class="logo">
-            <img src="img/festival_arts.png">
+            <img src="img/granada_sound.png">
         </div>
     </ion-header-bar>
     <ion-content>
