--- a/www/templates/user/sign_up.html
+++ b/www/templates/user/sign_up.html
@@ -24,8 +24,9 @@
             </div>
         </div>
         <div class="login-footer">
+            <a ng-click="openLink('http://www.granadasound.com/wp-content/uploads/2016/12/condiciones_generales_granada_sound_2017.pdf')">T&eacute;rminos y condiciones</a>
+            <a ng-click="openLink('http://www.granadasound.com/wp-content/uploads/2016/11/aviso_legal_granada_sound_17.pdf')">Pol&iacute;tica de privacidad</a>
             <img src="img/login/sign-up.png" ng-click="signUp()">
-            <a ng-click="openLink('http://www.festivaldelesarts.com/wp-content/uploads/2015/10/Condiciones_Generales_Arts_2016.pdf')">T&eacute;rminos y condiciones</a>
         </div>
     </div>
 
