modified info section

--- a/www/templates/info/main.html
+++ b/www/templates/info/main.html
@@ -16,10 +16,10 @@
             <ion-item ng-click="go('menu.sponsor')">
                 3. Patrocinadores
             </ion-item>
-            <ion-item ng-click="openLink('http://www.festivaldelesarts.com/')">
+            <ion-item ng-click="openLink('http://www.granadasound.com/')">
                 4. Web
             </ion-item>
-            <ion-item ng-click="openLink('http://www.festivaldelesarts.com/wp-content/uploads/2015/10/Aviso_Legal_Festival_de_les_Arts_2016.pdf')">
+            <ion-item ng-click="openLink('http://www.granadasound.com/wp-content/uploads/2016/11/aviso_legal_granada_sound_17.pdf')">
                 5. Aviso legal
             </ion-item>
         </ion-list>
