--- a/www/templates/info/sponsor.html
+++ b/www/templates/info/sponsor.html
@@ -12,7 +12,23 @@
         </div>
         <div class="row images">
             <div class="col col-50">
+                <img ng-src="img/sponsor/desperados.jpg">
+            </div>
+            <div class="col col-50">
                 <img ng-src="img/sponsor/negrita.png">
+            </div>
+        </div>
+        <div class="row images">
+            <div class="col col-50">
+                <img style="margin:10px 0;" ng-src="img/sponsor/inside.png">
+            </div>
+            <div class="col col-50">
+                <img ng-src="img/sponsor/redbull.png">
+            </div>
+        </div>
+        <div class="row images">
+            <div class="col col-50">
+                <img ng-src="img/sponsor/underwood.png">
             </div>
             <div class="col col-50">
                 <img ng-src="img/sponsor/coolway.png">
@@ -20,18 +36,10 @@
         </div>
         <div class="row images">
             <div class="col col-50">
-                <img ng-src="img/sponsor/redbull.png">
-            </div>
-            <div class="col col-50">
                 <img ng-src="img/sponsor/monbus.png">
             </div>
-        </div>
-        <div class="row images">
             <div class="col col-50">
-                </br>
-            </div>
-            <div class="col col-50">
-                <img ng-src="img/sponsor/underwood.png">
+                <br/>
             </div>
         </div>
         <div class="row subtitle">
@@ -44,7 +52,7 @@
                 <img ng-src="img/sponsor/radio3.png">
             </div>
             <div class="col col-50">
-                <img ng-src="img/sponsor/ocimag.png">
+                <img ng-src="img/sponsor/sol-musica.jpg">
             </div>
         </div>
         <div class="row subtitle">
@@ -53,8 +61,11 @@
             </div>
         </div>
         <div class="row images">
-            <div class="col col-100">
-                <img ng-src="img/sponsor/gva.png">
+            <div class="col col-50">
+                <img ng-src="img/sponsor/granada.jpg">
+            </div>
+            <div class="col col-50">
+                <br/>
             </div>
         </div>
     </ion-content>
