--- a/www/templates/social/main.html
+++ b/www/templates/social/main.html
@@ -3,8 +3,9 @@
         <div class="row filters" scroll="false">
             <div class="col col-60" ng-click="view.show = 'facebook';" ng-class="{'active': view.show  === 'facebook'}">
                 <div class="facebook filter">
-                    <img src="img/coolway/social-network/facebook_white.png" ng-if="view.show  != 'facebook'">
-                    <img src="img/coolway/social-network/facebook_yellow.png" ng-if="view.show  === 'facebook'">
+                    <!--<img src="img/coolway/social-network/facebook_red.png" ng-if="view.show  != 'facebook'">-->
+                    <!--<img src="img/coolway/social-network/facebook_brown.png" ng-if="view.show  === 'facebook'">-->
+                    <img src="img/coolway/social-network/facebook_brown.png">
                     <button class="button button-clear">
                         Facebook
                     </button>
@@ -21,8 +22,9 @@
             <!--</div>-->
             <div class="col col-40" ng-click="loadTwitter()" ng-class="{'active': view.show  === 'twitter'}">
                 <div class="twitter filter">
-                    <img src="img/coolway/social-network/twitter_white.png" ng-if="view.show  != 'twitter'">
-                    <img src="img/coolway/social-network/twitter_yellow.png" ng-if="view.show  === 'twitter'">
+                    <!--<img src="img/coolway/social-network/twitter_red.png" ng-if="view.show  != 'twitter'">-->
+                    <!--<img src="img/coolway/social-network/twitter_brown.png" ng-if="view.show  === 'twitter'">-->
+                    <img src="img/coolway/social-network/twitter_brown.png" ng-if="view.show  === 'twitter'">
                     <button class="button button-clear">
                         Twitter
                     </button>
