adding new changes

--- a/www/templates/info/sponsor.html
+++ b/www/templates/info/sponsor.html
@@ -23,7 +23,8 @@
                 <img ng-src="img/sponsor/underwood.png">
             </div>
             <div class="col col-50">
-                <img ng-src="img/sponsor/superbritanico.png">
+                <!--<img ng-src="img/sponsor/superbritanico.png">-->
+                <img ng-src="img/sponsor/defestivales.png">
             </div>
         </div>
         <div class="row images">
@@ -31,7 +32,7 @@
                 <img ng-src="img/sponsor/monbus.png">
             </div>
             <div class="col col-50">
-                <img ng-src="img/sponsor/defestivales.png">
+                <!--<img ng-src="img/sponsor/defestivales.png">-->
             </div>
         </div>
         <div class="row subtitle">
