--- a/www/templates/menu/left.html
+++ b/www/templates/menu/left.html
@@ -33,7 +33,7 @@
         </button>
         <button class="button button-clear category" menu-close ui-sref="menu.foodies">
             <img src="img/menu/category/transparent.gif">
-            <a>FOODIES</a>
+            <a>PICNIC</a>
         </button>
         <button class="button button-clear category" menu-close ui-sref="menu.info">
             <img src="img/menu/category/transparent.gif">
