--- a/www/templates/poster/main.html
+++ b/www/templates/poster/main.html
@@ -1,5 +1,5 @@
 <ion-view>
     <ion-content has-bouncing="true" scroll="false" class="poster">
-        <img  err-SRC="img/poster/main.png" ng-src="{{view.server_image}}festivals/{{view.feast}}/cartel/{{view.poster.image}}" alt="poster">
+        <img  err-SRC="img/poster/main.jpg" ng-src="{{view.server_image}}festivals/{{view.feast}}/cartel/{{view.poster.image}}" alt="poster">
     </ion-content>
 </ion-view>
